# KRustLang

./: .gitignore  README.md
krust_lang/: Cargo.toml  test.txt
krust_lang/proptest-regressions/: main.txt
krust_lang/src/: cli_reader.rs  compiler.rs  error.rs  krustc.rs  lexer.rs  lib.rs  log.rs  main.rs  math.rs  parser.rs  trie.rs  vm.rs
krust_lang/src/compiler/: const_pool.rs  mod.rs
krust_lang/src/lexer/: mod.rs  trie.rs
krust_lang/src/util/: log.rs  mod.rs  trie.rs
krust_lang/src/vm/: math.rs  mod.rs
krust_lang/tests/: README.md
